# Signapse

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  Signapse  build.sh  dconfig  index.html  setup.sh  test.sh
.github/workflows/: build_test.yml  cmake_build.yml  docs.yml  static-analysis.yml
docs/html/: BlockingQueue_8cpp.html  BlockingQueue_8cpp__dep__incl.map  BlockingQueue_8cpp__incl.md5  BlockingQueue_8cpp_source.html  BlockingQueue_8h.html  BlockingQueue_8h__incl.map  BlockingQueue_8h__incl.md5  BlockingQueue_8h_source.html  CNNProcessor_8cpp.html  CNNProcessor_8cpp__incl.map  CNNProcessor_8cpp__incl.md5  CNNProcessor_8cpp_source.html  CNNProcessor_8h.html  CNNProcessor_8h__dep__incl.map  CNNProcessor_8h__dep__incl.md5  CNNProcessor_8h__incl.map  CNNProcessor_8h__incl.md5  CNNProcessor_8h_source.html  Main_8cpp__incl.map  annotated.html  camera_8cpp.html  camera_8cpp__incl.map  camera_8cpp__incl.md5  camera_8cpp_source.html  camera_8h.html  camera_8h__dep__incl.map  camera_8h__incl.map  camera_8h__incl.md5  camera_8h_source.html  classBlockingQueue-members.html  classBlockingQueue.html  classBlockingQueue__inherit__graph.map  classBlockingQueue__inherit__graph.md5  classCNNProcessor-members.html  classCNNProcessor.html  classCNNProcessor__coll__graph.map  classCNNProcessor__coll__graph.md5  classCNNProcessor__inherit__graph.map  classCNNProcessor__inherit__graph.md5  classCamera-members.html  (+74 more)
docs/latex/: BlockingQueue_8cpp.tex  BlockingQueue_8cpp_source.tex  BlockingQueue_8h.tex  BlockingQueue_8h__dep__incl.md5  BlockingQueue_8h_source.tex  CNNProcessor_8cpp.tex  CNNProcessor_8cpp__incl.md5  CNNProcessor_8cpp_source.tex  CNNProcessor_8h.tex  CNNProcessor_8h__dep__incl.md5  CNNProcessor_8h__incl.md5  CNNProcessor_8h_source.tex  Main_8cpp.tex  annotated.tex  camera_8cpp.tex  camera_8cpp__incl.md5  camera_8cpp_source.tex  camera_8h.tex  camera_8h__dep__incl.md5  camera_8h__incl.md5  camera_8h_source.tex  classBlockingQueue.tex  classBlockingQueue__coll__graph.md5  classCNNProcessor.tex  classCNNProcessor__coll__graph.md5  classCNNProcessor__inherit__graph.md5  classCamera.tex  classCamera__coll__graph.md5  classCamera__inherit__graph.md5  classReel.tex  classReel__coll__graph.md5  classReel__inherit__graph.md5  classTaskmaster.tex  classTaskmaster__coll__graph.md5  classdog__inherit__graph.md5  classpoodle.tex  classpoodle__coll__graph.md5  classpoodle__inherit__graph.md5  classstd_1_1deque_3_01Scene_01_4.tex  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  (+25 more)
gui/: README.md  TaskMaster.ui
html/: BatchCNNProcessor_8cpp.html  BatchCNNProcessor_8cpp__incl.map  BatchCNNProcessor_8cpp__incl.md5  BatchCNNProcessor_8cpp_source.html  BatchCNNProcessor_8h.html  BatchCNNProcessor_8h__dep__incl.map  BatchCNNProcessor_8h__dep__incl.md5  BatchCNNProcessor_8h__incl.map  BatchCNNProcessor_8h__incl.md5  BatchCNNProcessor_8h_source.html  BlockingQueue_8cpp.html  BlockingQueue_8cpp__dep__incl.map  BlockingQueue_8cpp__dep__incl.md5  BlockingQueue_8cpp__incl.map  BlockingQueue_8cpp__incl.md5  BlockingQueue_8cpp_source.html  BlockingQueue_8h.html  BlockingQueue_8h__dep__incl.map  BlockingQueue_8h__dep__incl.md5  BlockingQueue_8h__incl.map  BlockingQueue_8h__incl.md5  BlockingQueue_8h_source.html  CNNProcessorSettings_8h.html  CNNProcessorSettings_8h__dep__incl.map  CNNProcessorSettings_8h__dep__incl.md5  CNNProcessorSettings_8h__incl.map  CNNProcessorSettings_8h__incl.md5  CNNProcessorSettings_8h_source.html  CNNProcessor_8cpp.html  CNNProcessor_8cpp__incl.map  CNNProcessor_8cpp__incl.md5  CNNProcessor_8cpp_source.html  CNNProcessor_8h.html  CNNProcessor_8h__dep__incl.map  CNNProcessor_8h__dep__incl.md5  CNNProcessor_8h__incl.map  CNNProcessor_8h__incl.md5  CNNProcessor_8h_source.html  CameraSettings_8h.html  CameraSettings_8h__dep__incl.map  (+480 more)
html/search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  (+52 more)
latex/: BlockingQueue_8cpp.tex  BlockingQueue_8cpp__dep__incl.md5  BlockingQueue_8cpp__incl.md5  BlockingQueue_8h__incl.md5  CNNProcessor_8cpp.tex  CNNProcessor_8cpp__incl.md5  CNNProcessor_8cpp_source.tex  CNNProcessor_8h.tex  CNNProcessor_8h_source.tex  Main_8cpp__incl.md5  Main_8cpp_source.tex  annotated.tex  camera_8cpp__incl.md5  camera_8h.tex  camera_8h_source.tex  classBlockingQueue.tex  classBlockingQueue__inherit__graph.md5  classCNNProcessor.tex  classCNNProcessor__inherit__graph.md5  classCamera.tex  classReel.tex  classTaskmaster.tex  classdog.tex  classdog__coll__graph.md5  classreel.tex  classstd_1_1deque_3_01Scene_01_4.tex  classstd_1_1deque_3_01Scene_01_4__coll__graph.md5  dir_68267d1309a1af8e8297ef4c3efbcdba.tex  main_8cpp.tex  main_8cpp_source.tex  reel_8h.tex  refman.tex  scene_8h.tex  scene_8h__dep__incl.md5  structResult.tex  structScene.tex  taskmaster_8cpp.tex  taskmaster_8cpp__incl.md5  taskmaster_8h.tex  taskmaster_8h_source.tex
models/: asl-classifier-20-epochs-mnist-model-2.pb  asl-classifier.pb
src/: BatchCNNProcessor.cpp  BatchCNNProcessor.h  BlockingQueue.cpp  BlockingQueue.h  CMakeLists.txt  CNNProcessor.cpp  CNNProcessor.h  CNNProcessorSettings.h  Camera.cpp  Camera.h  CameraSettings.h  DoubleSceneLinker.cpp  DoubleSceneLinker.h  FrameEditor.cpp  FrameEditor.h  Gui.cpp  Gui.h  LinkSplitter.cpp  LinkSplitter.h  Main.cpp  MultiThreadedSchedulableLink.cpp  MultiThreadedSchedulableLink.h  NThreadSchedulableSceneLinker.cpp  NThreadSchedulableSceneLinker.h  NThreadedCNNProcessor.cpp  NThreadedCNNProcessor.h  PipelineLink.cpp  PipelineLink.h  PreProcessor.cpp  PreProcessor.h  PreProcessorSettings.h  ProgressBar.cpp  ProgressBar.h  QtGeneratedGui.h  Scene.h  SceneCallback.h  SceneEditor.cpp  SceneEditor.h  SceneEditorSettings.h  SceneLinkScheduler.cpp  (+24 more)
test/: CMakeLists.txt  camera_test.cpp  gtest_blockingqueue.h  gtest_camera.h  gtest_cnnprocessor.h  gtest_linksplitter.h  gtest_preprocessor.h  gtest_scene.h  gtest_signapseutils.h  gtest_tools.h  inference_test.cpp  main.cpp  taskmaster_test.cpp
(+29 files in other folders)
